--- a/frontend/src/components/Loading/Loading.css
+++ b/frontend/src/components/Loading/Loading.css
@@ -1,4 +1,3 @@
-
 .loading-container {
   display: flex;
   align-items: center;
@@ -8,11 +7,24 @@
   left: 0;
   width: 100vw; /* Tüm genişlik */
   height: 100vh; /* Tüm yükseklik */
-  background-color: #ffffff; /* İsteğe bağlı: Arka plan rengi */
+  /* Arka plan ve blur efektlerini kaldırdık */
+  background: transparent;
+  z-index: 9999; /* Diğer içeriklerin üstünde yer alır */
+  overflow: hidden;
+}
+
+/* Pseudo-element ile flu arka plan */
+.loading-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: url("https://cdn.oneesports.gg/cdn-data/2023/01/Valorant_Lotus_Episode6ActI_Map-1024x576.jpg")
     center center / cover no-repeat;
-  z-index: 9999; /* Diğer içeriklerin üstünde yer alır */
-  overflow: hidden; 
+  filter: blur(8px);
+  z-index: -1; /* İçeriklerin arkasında kalması için */
 }
 
 /* Dönen görsel */
