--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -65,7 +65,7 @@
   }
   
   .product-thumbnail img {
-    width: 100px;
+    width: 100%;
     height: 100px;
     object-fit: cover;
     border-radius: 4px;
