--- a/frontend/src/components/Loading/Loading.css
+++ b/frontend/src/components/Loading/Loading.css
@@ -22,7 +22,8 @@
   width: 100%;
   height: 100%;
   background: url("https://cdn.oneesports.gg/cdn-data/2023/01/Valorant_Lotus_Episode6ActI_Map-1024x576.jpg")
-    center center / cover no-repeat;
+    center center / cover no-repeat fixed;
+
   filter: blur(8px);
   z-index: -1; /* İçeriklerin arkasında kalması için */
 }
