--- a/frontend/src/components/Layout/Header/Header.css
+++ b/frontend/src/components/Layout/Header/Header.css
@@ -502,7 +502,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('/wa2.jpg') no-repeat center center;
+  background: url('/sss.jpg') no-repeat center center;
   background-size: cover;
   filter: blur(3px); /* Blur miktarını isteğe göre ayarlayın */
   z-index: -1; /* Arka planı içeriğin arkasında tutar */
